fixed spacing

--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -16,6 +16,8 @@
     justify-content: center;
     align-items: center;
     padding: 1rem 6rem;
+   
+
 }
 
 #navbar {
@@ -24,6 +26,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 1rem;
 }
 
 .image_logo img {
